--- a/index.html
+++ b/index.html
@@ -888,6 +888,72 @@
 			<div class="next-4"></div>
 		</div>
 	</div>
+	<!--Попап слайдера с призами-->
+	<div class="popup-winner" style="display: none;">
+		<div class="popup-winner__wrapper">
+			<button class="popup-winner__close closer" type="button"></button>
+			<h2 class="popup-winner__title">Победители</h2>
+			<!--Сам слайдер-->
+			<div class="popup-winner__slider winner-slider">
+				<!---->
+				<div class="winner-slider__item winner-item">
+					<ul class="winner-item__list">
+						<li class="winner-item__wrap">
+							<b class="winner-item__name">Светлана (г. Тюмень)</b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name">Соня (г. Черногорск, р. Хакасия)</b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name">Эмиль (г. Казань)</b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name">Арина (г. Казань)</b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name">Хадиджа (г. Мончегорск, Мурм. обл.)</b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name">Анна (г. Чебоксары)</b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name">Арина (г. Прокопьевск)</b>
+						</li>
+					</ul>
+				</div>
+				<!---->
+				<div class="winner-slider__item winner-item">
+					<ul class="winner-item__list">
+						<li class="winner-item__wrap">
+							<b class="winner-item__name"></b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name"></b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name"></b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name"></b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name"></b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name"></b>
+						</li>
+						<li class="winner-item__wrap">
+							<b class="winner-item__name"></b>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<p class="popup-winner__description"></p>
+			<!--Стрелки-->
+			<div class="prev-5"></div>
+			<div class="next-5"></div>
+		</div>
+	</div>
 	<script src="js/script.js"></script>
 </body>
 
