--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
 			<div class="next-4"></div>
 		</div>
 	</div>
-	<!--Попап слайдера с призами-->
+	<!--Попап слайдера с Победителями-->
 	<div class="popup-winner" style="display: none;">
 		<div class="popup-winner__wrapper">
 			<button class="popup-winner__close closer" type="button"></button>
@@ -925,25 +925,25 @@
 				<div class="winner-slider__item winner-item">
 					<ul class="winner-item__list">
 						<li class="winner-item__wrap">
-							<b class="winner-item__name"></b>
+							<b class="winner-item__name">Елена (г. Уфа)</b>
 						</li>
 						<li class="winner-item__wrap">
-							<b class="winner-item__name"></b>
+							<b class="winner-item__name">Диана (г. Саратов)</b>
 						</li>
 						<li class="winner-item__wrap">
-							<b class="winner-item__name"></b>
+							<b class="winner-item__name">Доминика (г. Тюмень)</b>
 						</li>
 						<li class="winner-item__wrap">
-							<b class="winner-item__name"></b>
+							<b class="winner-item__name">Елена (г. Новороссийск, Красн.край)</b>
 						</li>
 						<li class="winner-item__wrap">
-							<b class="winner-item__name"></b>
+							<b class="winner-item__name">Никита (г. Омск)</b>
 						</li>
 						<li class="winner-item__wrap">
-							<b class="winner-item__name"></b>
+							<b class="winner-item__name">Милана (г. Владикавказ)</b>
 						</li>
 						<li class="winner-item__wrap">
-							<b class="winner-item__name"></b>
+							<b class="winner-item__name">Лев (г. Тюмень)</b>
 						</li>
 					</ul>
 				</div>
